--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 			<artifactId>lavaplayer</artifactId>
 			<version>1.3.77</version>
 		</dependency>
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>2.2.3</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
